# radiance_field_ros

./: .gitignore  README.md  pyproject.toml
nerf_teleoperation/: CMakeLists.txt  package.xml  setup.py
nerf_teleoperation_msgs/: CMakeLists.txt  package.xml
nerf_teleoperation_msgs/action/: NerfRenderRequest.action
nerf_view_controller/: CMakeLists.txt  package.xml  plugin_description.xml
nerf_view_controller/include/nerf_view_controller/: nerf_cam.hpp
nerf_view_controller/src/nerf_view_controller/: nerf_cam.cpp
ros_nerf/config/: anymal.yaml  dynaarm.yaml  panda.yaml  zed.yaml
ros_nerf/data/: ros_dataloader.py  ros_dataparser.py  ros_dataset.py
ros_nerf/scripts/: ros_runner.py  ros_saver.py
ros_nerf/utils/: ros_config.py  sensor.py
