<?xml version="1.0"?>
<package format="2">
  <name>nerf_teleoperation</name>
  <version>0.1.0</version>
  <description>The Nerf teleoperation meta package to compile both msg and RViz plugin plus hold launch files</description>
  
  <license>MIT</license>
  <author email="mwilder@ethz.ch">Maximum Wilder-Smith</author>
  <maintainer email="mwilder@ethz.ch">Maximum Wilder-Smith</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>nerf_teleoperation_msgs</depend>
  <depend>nerf_view_controller</depend>

</package>
