<?xml version="1.0"?>

<package format="2">
  <name>nerf_teleoperation_msgs</name>
  <version>0.1.0</version>
  <description>Messages and services for Nerf ROS Package</description>

  <license>MIT</license>
  <author email="mwilder@ethz.ch">Maximum Wilder-Smith</author>
  <maintainer email="mwilder@ethz.ch">Maximum Wilder-Smith</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

</package>
